y.output

state 0
	$accept: .top $end 

	NUM  shift 9
	IDENT  shift 7
	.  error

	top  goto 1
	expr  goto 2
	term  goto 4
	factor  goto 6
	atom  goto 8
	decl  goto 5
	decls  goto 3

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  expr.    (1)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 10
	'-'  shift 11
	.  reduce 1 (src line 33)


state 3
	top:  decls.';' expr 
	decls:  decls.';' decl 

	';'  shift 12
	.  error


state 4
	expr:  term.    (9)
	term:  term.'*' factor 
	term:  term.'/' factor 

	'*'  shift 13
	'/'  shift 14
	.  reduce 9 (src line 79)


state 5
	decls:  decl.    (4)

	.  reduce 4 (src line 54)


state 6
	term:  factor.    (12)

	.  reduce 12 (src line 93)


state 7
	decl:  IDENT.'=' expr 
	decl:  IDENT.args '=' expr 
	factor:  IDENT.atoms 
	atom:  IDENT.    (20)

	NUM  shift 9
	IDENT  shift 18
	'='  shift 15
	.  reduce 20 (src line 132)

	atom  goto 19
	atoms  goto 17
	args  goto 16

state 8
	factor:  atom.    (15)

	.  reduce 15 (src line 107)


state 9
	atom:  NUM.    (19)

	.  reduce 19 (src line 127)


state 10
	expr:  expr '+'.term 

	NUM  shift 9
	IDENT  shift 21
	.  error

	term  goto 20
	factor  goto 6
	atom  goto 8

state 11
	expr:  expr '-'.term 

	NUM  shift 9
	IDENT  shift 21
	.  error

	term  goto 22
	factor  goto 6
	atom  goto 8

state 12
	top:  decls ';'.expr 
	decls:  decls ';'.decl 

	NUM  shift 9
	IDENT  shift 7
	.  error

	expr  goto 23
	term  goto 4
	factor  goto 6
	atom  goto 8
	decl  goto 24

state 13
	term:  term '*'.factor 

	NUM  shift 9
	IDENT  shift 21
	.  error

	factor  goto 25
	atom  goto 8

state 14
	term:  term '/'.factor 

	NUM  shift 9
	IDENT  shift 21
	.  error

	factor  goto 26
	atom  goto 8

state 15
	decl:  IDENT '='.expr 

	NUM  shift 9
	IDENT  shift 21
	.  error

	expr  goto 27
	term  goto 4
	factor  goto 6
	atom  goto 8

state 16
	decl:  IDENT args.'=' expr 
	args:  args.IDENT 

	IDENT  shift 29
	'='  shift 28
	.  error


state 17
	factor:  IDENT atoms.    (16)
	atoms:  atoms.atom 

	NUM  shift 9
	IDENT  shift 31
	.  reduce 16 (src line 112)

	atom  goto 30

 18: reduce/reduce conflict  (red'ns 7 and 20) on IDENT
state 18
	args:  IDENT.    (7)
	atom:  IDENT.    (20)

	IDENT  reduce 7 (src line 69)
	'='  reduce 7 (src line 69)
	.  reduce 20 (src line 132)


state 19
	atoms:  atom.    (18)

	.  reduce 18 (src line 122)


state 20
	expr:  expr '+' term.    (10)
	term:  term.'*' factor 
	term:  term.'/' factor 

	'*'  shift 13
	'/'  shift 14
	.  reduce 10 (src line 84)


state 21
	factor:  IDENT.atoms 
	atom:  IDENT.    (20)

	NUM  shift 9
	IDENT  shift 31
	.  reduce 20 (src line 132)

	atom  goto 19
	atoms  goto 17

state 22
	expr:  expr '-' term.    (11)
	term:  term.'*' factor 
	term:  term.'/' factor 

	'*'  shift 13
	'/'  shift 14
	.  reduce 11 (src line 88)


state 23
	top:  decls ';' expr.    (2)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 10
	'-'  shift 11
	.  reduce 2 (src line 41)


state 24
	decls:  decls ';' decl.    (3)

	.  reduce 3 (src line 49)


state 25
	term:  term '*' factor.    (13)

	.  reduce 13 (src line 98)


state 26
	term:  term '/' factor.    (14)

	.  reduce 14 (src line 102)


state 27
	decl:  IDENT '=' expr.    (5)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 10
	'-'  shift 11
	.  reduce 5 (src line 59)


state 28
	decl:  IDENT args '='.expr 

	NUM  shift 9
	IDENT  shift 21
	.  error

	expr  goto 32
	term  goto 4
	factor  goto 6
	atom  goto 8

state 29
	args:  args IDENT.    (8)

	.  reduce 8 (src line 74)


state 30
	atoms:  atoms atom.    (17)

	.  reduce 17 (src line 117)


state 31
	atom:  IDENT.    (20)

	.  reduce 20 (src line 132)


state 32
	decl:  IDENT args '=' expr.    (6)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 10
	'-'  shift 11
	.  reduce 6 (src line 64)


12 terminals, 10 nonterminals
21 grammar rules, 33/8000 states
0 shift/reduce, 1 reduce/reduce conflicts reported
59 working sets used
memory: parser 34/120000
15 extra closures
40 shift entries, 3 exceptions
20 goto entries
16 entries saved by goto default
Optimizer space used: output 36/120000
36 table entries, 0 zero
maximum spread: 12, maximum offset: 28
